@@ -69,10 +69,10 @@ ProcessorArchitecture = 'None'
 # NestedModules = @()
 
 # Functions to export from this module, for best performance, do not use wildcards and do not delete the entry, use an empty array if there are no functions to export.
-FunctionsToExport = @('Convert-Base64', 'Get-LdapInfo', 'Invoke-PingSweep', 'Invoke-PortScan', 'Start-SimpleHTTPServer', 'Test-PrivEsc', 'Get-InitialEnum', 'Get-Driver', 'Get-AntiVirusProduct', 'Invoke-FodHelperBypass', 'Invoke-InMemoryPayload', 'Invoke-UseCreds', 'Invoke-UnquotedServicePathExploit', 'Convert-SID', 'Test-BruteForceCredentials', 'Test-BruteForceZip', 'Get-NetworkShareInfo', 'Get-ClearTextPassword', 'Start-Listener', 'Start-Bind', 'Invoke-ReversePowerShell', 'Invoke-AzurePasswordSpray', 'Test-KerberosDoubleHop')
+FunctionsToExport = @('Convert-Base64', 'Get-LdapInfo', 'Invoke-PingSweep', 'Invoke-PortScan', 'Start-SimpleHTTPServer', 'Test-PrivEsc', 'Get-InitialEnum', 'Get-Driver', 'Get-AntiVirusProduct', 'Invoke-FodHelperBypass', 'Invoke-InMemoryPayload', 'Invoke-UseCreds', 'Invoke-UnquotedServicePathExploit', 'Convert-SID', 'Test-BruteForceCredentials', 'Test-BruteForceZip', 'Get-NetworkShareInfo', 'Get-ClearTextPassword', 'Start-Listener', 'Start-Bind', 'Invoke-ReversePowerShell', 'Invoke-AzurePasswordSpray', 'Test-KerberosDoubleHop','Invoke-DccwUACBypass')
 
 # Cmdlets to export from this module, for best performance, do not use wildcards and do not delete the entry, use an empty array if there are no cmdlets to export.
-CmdletsToExport = @('Convert-Base64', 'Get-LdapInfo', 'Invoke-PingSweep', 'Invoke-PortScan', 'Start-SimpleHTTPServer', 'Test-PrivEsc', 'Get-InitialEnum', 'Get-Driver', 'Get-AntiVirusProduct', 'Invoke-FodHelperBypass', 'Invoke-InMemoryPayload', 'Invoke-UseCreds', 'Invoke-UnquotedServicePathExploit', 'Convert-SID', 'Test-BruteForceCredentials', 'Test-BruteForceZip', 'Get-NetworkShareInfo', 'Get-ClearTextPassword', 'Start-Listener', 'Start-Bind', 'Invoke-ReversePowerShell', 'Invoke-AzurePasswordSpray', 'Test-KerberosDoubleHop')
+CmdletsToExport = @('Convert-Base64', 'Get-LdapInfo', 'Invoke-PingSweep', 'Invoke-PortScan', 'Start-SimpleHTTPServer', 'Test-PrivEsc', 'Get-InitialEnum', 'Get-Driver', 'Get-AntiVirusProduct', 'Invoke-FodHelperBypass', 'Invoke-InMemoryPayload', 'Invoke-UseCreds', 'Invoke-UnquotedServicePathExploit', 'Convert-SID', 'Test-BruteForceCredentials', 'Test-BruteForceZip', 'Get-NetworkShareInfo', 'Get-ClearTextPassword', 'Start-Listener', 'Start-Bind', 'Invoke-ReversePowerShell', 'Invoke-AzurePasswordSpray', 'Test-KerberosDoubleHop','Invoke-DccwUACBypass')
 
 # Variables to export from this module
 VariablesToExport = '*'
