@@ -4,6 +4,7 @@
 Module Version 1.2
   - Updated Help to fit typical PS cmdlet standards
   - Added 3 cmdlets from my ReversePowerShell module to this module as they are red team tools as well.
+  - Added initial creation of the Invoke-DccwUACBypass cmdlet to the module manifest.
   - Added initial creation of the Test-KerberosDoubleHop cmdlet to the module manifest.
   - Added initial creation of the Invoke-AzurePasswordSpray cmdlet to the module manifest.
   - Added initial creation of the Get-ClearTextPassword cmdlet to the module manifest.
@@ -33,4 +34,4 @@ Module Version 1.1
 #----------------------------------------------------------------------
 # Command for updating Module Manifest
 #
-# New-ModuleManifest -Path .\RedTeamEnum.psd1 -Author 'Robert H. Osborne' -CompanyName 'OsbornePro' -RootModule .\RedTeamEnum.psm1 -ModuleVersion 1.2 -Description 'Collection of tools Red Teamers may use during a penetration test.' -CmdletsToExport 'Convert-Base64', 'Get-LdapInfo', 'Invoke-PingSweep', 'Invoke-PortScan','Start-SimpleHTTPServer', 'Test-PrivEsc', 'Get-InitialEnum', 'Get-Driver', 'Get-AntiVirusProduct', 'Invoke-FodHelperBypass', 'Invoke-InMemoryPayload', 'Invoke-UseCreds', 'Invoke-UnquotedServicePathExploit','Convert-SID','Test-BruteForceCredentials','Test-BruteForceZip','Get-NetworkShareInfo','Get-ClearTextPassword','Start-Listener','Start-Bind','Invoke-ReversePowerShell','Invoke-AzurePasswordSpray','Test-KerberosDoubleHop' -FunctionsToExport 'Convert-Base64', 'Get-LdapInfo', 'Invoke-PingSweep', 'Invoke-PortScan','Start-SimpleHTTPServer', 'Test-PrivEsc', 'Get-InitialEnum', 'Get-Driver', 'Get-AntiVirusProduct', 'Invoke-FodHelperBypass', 'Invoke-InMemoryPayload', 'Invoke-UseCreds', 'Invoke-UnquotedServicePathExploit','Convert-SID','Test-BruteForceCredentials','Test-BruteForceZip','Get-NetworkShareInfo','Get-ClearTextPassword','Start-Listener','Start-Bind','Invoke-ReversePowerShell','Invoke-AzurePasswordSpray','Test-KerberosDoubleHop' -ProjectUri 'https://github.com/tobor88/PowerShell-Red-Team' -ProcessorArchitecture 'None' -Tags 'PowerShell','CyberSecurity','InfoSec','PenetrationTesting','PenTesting','Shells','Security' -AliasesToExport @() -PowerShellHostVersion '5.0' -DotNetFrameworkVersion '3.5' -ClrVersion '3.5' -PowerShellHostName 'ConsoleHost' -IconURI 'https://img1.wsimg.com/isteam/ip/8f3c0f3f-85e4-413f-bd91-f19d4f317a5a/logo/967ca34c-6d9b-4d2f-9206-83481c35769d.png/:/rs=h:392/ll' -LicenseUri 'https://raw.githubusercontent.com/tobor88/PowerShell-Red-Team/master/LICENSE' -HelpInfoUri 'https://raw.githubusercontent.com/tobor88/PowerShell-Red-Team/master/README.md' -Copyright '(c) 2020 Robert H. Osborne. All rights reserved.' -PowerShellVersion '5.0'
+# New-ModuleManifest -Path .\RedTeamEnum.psd1 -Author 'Robert H. Osborne' -CompanyName 'OsbornePro' -RootModule .\RedTeamEnum.psm1 -ModuleVersion 1.2 -Description 'Collection of tools Red Teamers may use during a penetration test.' -CmdletsToExport 'Convert-Base64', 'Get-LdapInfo', 'Invoke-PingSweep', 'Invoke-PortScan','Start-SimpleHTTPServer', 'Test-PrivEsc', 'Get-InitialEnum', 'Get-Driver', 'Get-AntiVirusProduct', 'Invoke-FodHelperBypass', 'Invoke-InMemoryPayload', 'Invoke-UseCreds', 'Invoke-UnquotedServicePathExploit','Convert-SID','Test-BruteForceCredentials','Test-BruteForceZip','Get-NetworkShareInfo','Get-ClearTextPassword','Start-Listener','Start-Bind','Invoke-ReversePowerShell','Invoke-AzurePasswordSpray','Test-KerberosDoubleHop','Invoke-DccwUACBypass' -FunctionsToExport 'Convert-Base64', 'Get-LdapInfo', 'Invoke-PingSweep', 'Invoke-PortScan','Start-SimpleHTTPServer', 'Test-PrivEsc', 'Get-InitialEnum', 'Get-Driver', 'Get-AntiVirusProduct', 'Invoke-FodHelperBypass', 'Invoke-InMemoryPayload', 'Invoke-UseCreds', 'Invoke-UnquotedServicePathExploit','Convert-SID','Test-BruteForceCredentials','Test-BruteForceZip','Get-NetworkShareInfo','Get-ClearTextPassword','Start-Listener','Start-Bind','Invoke-ReversePowerShell','Invoke-AzurePasswordSpray','Test-KerberosDoubleHop','Invoke-DccwUACBypass' -ProjectUri 'https://github.com/tobor88/PowerShell-Red-Team' -ProcessorArchitecture 'None' -Tags 'PowerShell','CyberSecurity','InfoSec','PenetrationTesting','PenTesting','Shells','Security' -AliasesToExport @() -PowerShellHostVersion '5.0' -DotNetFrameworkVersion '3.5' -ClrVersion '3.5' -PowerShellHostName 'ConsoleHost' -IconURI 'https://img1.wsimg.com/isteam/ip/8f3c0f3f-85e4-413f-bd91-f19d4f317a5a/logo/967ca34c-6d9b-4d2f-9206-83481c35769d.png/:/rs=h:392/ll' -LicenseUri 'https://raw.githubusercontent.com/tobor88/PowerShell-Red-Team/master/LICENSE' -HelpInfoUri 'https://raw.githubusercontent.com/tobor88/PowerShell-Red-Team/master/README.md' -Copyright '(c) 2020 Robert H. Osborne. All rights reserved.' -PowerShellVersion '5.0'
